--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -189,7 +189,7 @@ table.tab a[class$="-lineup"] {
   }
 }
 
-table.tab tbody tr td:last-child {
+table.tab tbody tr td.action-icon {
   background: none repeat scroll 0 0 #0FEA6C;
   color: #FFFFFF;
   font-family: arial;
