--- a/app/views/lineups/_lineup_player.html.erb
+++ b/app/views/lineups/_lineup_player.html.erb
@@ -16,5 +16,5 @@
     <td class='fppg'>
       <span>24.5</span>
     </td>
-    <td><%= link_to '+', '#_', class: 'add-to-lineup' %> </td>
+    <td class='action-icon'><%= link_to '+', '#_', class: 'add-to-lineup' %> </td>
 <% end %>
