lineup index, edit, and update

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -226,6 +226,11 @@ table.tab tbody tr {
   margin: 20px 0 28px;
 }
 
+div.lineups .col-md-4 {
+  padding-right: 7px;
+  padding-left: 7px;
+}
+
 .submitTeam {
   width: 300px;
   margin: 0 auto
