--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -63,10 +63,14 @@ h1, h2, h3, h4, h5, h6 {
   height: 55px;
 }
 
+
 .capital_top_nav {
   height: auto;
-  a {
+  .social-link a{
     color: #FFFFFF !important;
+  }
+
+  a {
     font-size: 16px;
     font-weight: bold;
     height: 45px;
