--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -108,7 +108,7 @@
         <h4>
           <strong> AVG. REM./PLAYER:</strong>
           <span id='contest-salary-consumed' class="currency">
-            <%= number_to_currency consumed_salary(@contest), precision: 0 %>
+            <%= number_to_currency consumed_salary(@lineup), precision: 0 %>
           </span>
         </h4>
       </div>
@@ -116,7 +116,7 @@
         <h4>
           <strong> REM./SALARY:</strong>
           <span id='contest-salary-cap' class="currency" data-salary=<%= @contest.salary_cap %>>
-             <%= number_to_currency @contest.salary_cap, precision: 0 %>
+             <%= number_to_currency @contest.salary_cap - consumed_salary(@lineup), precision: 0 %>
           </span>
         </h4>
       </div>
@@ -136,7 +136,7 @@
         <%= f.fields_for :lineup_spots do |spot_form| %>
             <% spot = spot_form.object %>
             <% position = spot.sport_position %>
-            <%= content_tag :tr, id: dom_id(spot), class: 'lineup-spot', data: {sport_position_name: position.name, player_id: spot.player.try(:id) || '', spot: spot.spot} do %>
+            <%= content_tag :tr, id: dom_id(spot), class: 'lineup-spot', data: {sport_position_name: position.name, player_id: spot.player_id, spot: spot.spot} do %>
               <td>
                 <strong><span><%= position.name %> </span></strong>
                 <%= spot_form.hidden_field :sport_position_id %>
