fix salary cap in lineup

--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -150,7 +150,7 @@
                 <span>&nbsp;</span>
               </td>
               <td class='salary val'>
-                <span>&nbsp;</span>
+                <span class="currency">&nbsp;</span>
               </td>
               <td class='fppg val'>
                 <span>&nbsp;</span>
