--- a/app/views/lineups/_lineup_player.html.erb
+++ b/app/views/lineups/_lineup_player.html.erb
@@ -10,7 +10,7 @@
     <td class='opp'>
       <span>Ind@SDD</span>
     </td>
-    <td class='salary'>
+    <td class='salary currency'>
       <span data-salary=<%= player.salary %>> <%= number_to_currency player.salary, precision: 0 %></span>
     </td>
     <td class='fppg'>
