Signed in user should not redirect to splash page. Add ability to invite friends to join beta list.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,6 @@
  *= require entries
  *= require lineups
  *= require bootstrap-sortable
+ *= require social-share-button
  *= require_tree .
  */
