--- a/app/views/waiting_lists/_form.html.erb
+++ b/app/views/waiting_lists/_form.html.erb
@@ -1,25 +1,9 @@
-<%= form_for(@waiting_list) do |f| %>
-  <% if @waiting_list.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@waiting_list.errors.count, "error") %> prohibited this waiting_list from being saved:</h2>
+<h1>Join our club.</h1>
 
-      <ul>
-      <% @waiting_list.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_for @waiting_list do |f|  %>
+    <%= f.label :email %>
+    <%= f.email_field :email, autofocus: true, required: true %>
+    <%= f.hidden_field :invited_by_token %>
 
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.submit 'JOIN BETA GROUP' %>
 <% end %>
