Add player stats popup. Remove duplicate route. Fix progress bar. Remove unused specs. Fix functional specs.

--- a/app/assets/stylesheets/lineups.css.scss
+++ b/app/assets/stylesheets/lineups.css.scss
@@ -467,6 +467,9 @@ ul.completedcontest li {
 
 /*POP UP*/
 
+.modal .capitalcontent{
+  border-radius: 10px;
+}
 .btnClose {
   border: 1px solid #555555;
   border-radius: 33px;
@@ -474,6 +477,7 @@ ul.completedcontest li {
   float: right;
   font-size: 18px;
   padding: 2px 10px;
+  background: #fff;
 }
 
 .popupTitle {
