--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,5 +17,7 @@
  *= require lineups
  *= require bootstrap-sortable
  *= require social-share-button
+ *= require bootstrap-modal-bs3patch
+ *= require bootstrap-modal
  *= require_tree .
  */
