--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -81,7 +81,7 @@
             <%= link_to 'Home', root_path %>
           </li>
           <li class='<%= menu_classes 'contests' %>'>
-            <%= link_to 'Contests', browse_contests_path %>
+            <%= link_to 'Contests', contests_path %>
           </li>
           <li class='<%= menu_classes 'lineups' %>'>
             <%= link_to 'Lineups', lineups_path %>
