--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,5 +19,5 @@
  *= require social-share-button
  *= require bootstrap-modal-bs3patch
  *= require bootstrap-modal
- *= require_tree .
+ *= require waiting_lists
  */
