--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -31,14 +31,14 @@
       <div class='login'>
         <ul class='nav navbar-nav navbar-right capital-navbar-right'>
           <li class='dropdownlogin'>
-            <a class='dropdown-toggle' data-toggle="dropdown" href="#">
-              FILTER BY SPORT &nbsp;
-              <b class='downarrowblack'>&nbsp;</b>
-            </a>
-            <ul class='dropdown-menu'>
-              <li><a href="#">CBB</a></li>
-              <li><a href="#">NBA</a></li>
-              <li><a href="#">NHL</a></li>
+            <%= link_to '#_', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do %>
+              FILTER BY SPORT<b class='downarrowblack'>&nbsp;</b>
+            <% end %>
+            <ul class='dropdown-menu contest-filter'>
+              <li><a href="#_" class="filter" data-filter='all'>All</a></li>
+              <% Contest.group(:sport).pluck(:sport).each do |sport| %>
+                  <li><a href="#_" class="filter" data-filter="<%= sport.downcase %>"><%= sport %></a></li>
+              <% end %>
             </ul>
           </li>
         </ul>
@@ -63,7 +63,7 @@
   </div>
 </div>
 
-<table class='contestHead table sortable'>
+<table class='contestHead table sortable filter-result'>
   <thead>
   <tr>
     <th data-defaultsort="asc" class="srt-contest-name">CONTEST</th>
