--- a/app/views/accounts/new_cc.html.erb
+++ b/app/views/accounts/new_cc.html.erb
@@ -1,9 +1,16 @@
+<%= render 'balanced_marketplace_uri' %>
         <div class="row">
             <div class="col-lg-12">
                 <button type="button" id="populate" class="btn btn-default pull-right" style="margin-bottom: 20px;">Populate Test Data</button>
             </div>
         </div>
 <%= form_tag("/add_fund", method: "post") do %>
+                            <div class="form-group">
+                                <label class="col-lg-5 control-label">Name on the card</label>
+                                <div class="col-lg-5">
+                                    <input type="text" id="cc-name" class="form-control" autocomplete="off"/>
+                                </div>
+                            </div>
                             <div class="form-group">
                                 <label class="col-lg-5 control-label">Card Number</label>
                                 <div class="col-lg-5">
@@ -25,5 +32,11 @@
                                     <input type="text" id="ex-csc" class="form-control" autocomplete="off" placeholder="453" maxlength="4" />
                                 </div>
                             </div>
-                            <a id="cc-submit" class="btn btn-large btn-primary pull-right">Tokenize</a>
+                            <div class="form-group">
+                                <label class="col-lg-5 control-label">Amount</label>
+                                <div class="col-lg-2">
+                                    <input type="text" id="deposit-amount" class="form-control"/>
+                                </div>
+                            </div>
+                            <a id="cc-submit" class="btn btn-large btn-primary pull-right">Deposit</a>
 <% end %>
