Add social links on splash page

--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -30,15 +30,17 @@
 </div>
 
 <div class="social-footer-container">
-  <%= link_to '#_' do %>
+  <%= link_to 'https://twitter.com/fantasycapital' do %>
     <%= image_tag 'twitter.jpg', alt: 'Fantasy capital Twitter page' %>
     Twitter
   <%end %>
-  <%= link_to '#_' do %>
+
+  <%= link_to 'https://www.facebook.com/pages/Fantasy-Capital/217352488447037' do %>
     <%= image_tag 'facebook.jpg', alt: 'Fantasy capital Facebook page' %>
     Facebook
    <% end %>
-  <%= link_to '#_' do %>
+
+  <%= link_to 'https://plus.google.com/b/113355143365224061494/113355143365224061494/posts' do %>
     <%= image_tag 'gplus.jpg', alt: 'Fantasy capital Google Plus page' %>
     Google+
   <% end %>
