--- a/app/views/projections/index.html.erb
+++ b/app/views/projections/index.html.erb
@@ -14,7 +14,7 @@
     <% @projections.each do |proj| %>
       <tr>
         <td><%= proj.player.name %></td>
-        <td><%= proj.fp.to_s %></td>
+        <td><%= link_to proj.fp.to_s, projection_projection_by_stats_path(proj) %></td>
         <td><%= proj.scheduled_game.start_date %></td>
         <td><%= proj.scheduled_game.home_team.name %></td>
         <td><%= proj.scheduled_game.away_team.name %></td>
