projection breakdowns by each game

--- a/app/views/projection_by_stats/index.html.erb
+++ b/app/views/projection_by_stats/index.html.erb
@@ -1,3 +1,6 @@
+<ol class="breadcrumb">
+  <li><%= link_to @projection.player.name, projection_projection_by_stats_path(@projection) %></a></li>
+</ol>
 
 <table class="table table-striped">
   <thead>
