display in easten timezone

--- a/app/views/projections/index.html.erb
+++ b/app/views/projections/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= proj.player.name %></td>
         <td><%= link_to proj.fp.to_s, projection_projection_by_stats_path(proj) %></td>
-        <td><%= proj.scheduled_game.start_date %></td>
+        <td><%= proj.scheduled_game.start_date.in_time_zone('America/New_York') %></td>
         <td><%= proj.scheduled_game.home_team.name %></td>
         <td><%= proj.scheduled_game.away_team.name %></td>
       </tr>
